updated styling for author names

--- a/_includes/author-bio.html
+++ b/_includes/author-bio.html
@@ -19,7 +19,7 @@
 	{% else %}
 	<!-- author is a guest contributor -->
 	<img class="author__avatar" src="{{ site.url }}/assets/images/avatar-default.svg" height="24"/>
-	{{ author }}
+	<span class="author__name">{{ author }}</span>
 	{% endif %}
 {% endfor %}
 
