--- a/_includes/author-bio.html
+++ b/_includes/author-bio.html
@@ -1,9 +1,15 @@
 <!-- author bio -->
 <section class="author">
 {% for author in page.author %}
-	{% if site.data.contributors[author] %}
+
+	{% for a in site.authors %}
+	    {%if a.name == author %}
+		    {% assign author-bio = a %}
+	    {% endif %}
+	{% endfor %}
+
+	{% if author-bio.name %}
 	<!-- author is a known contributor -->
-		{% assign author-bio = site.data.contributors[author] %}
 		{% if author-bio.avatar %}
 		<img class="author__avatar" src="{{ site.url }}/assets/images/{{author-bio.avatar}}" height="24"/>
 		{% else %}
@@ -13,14 +19,17 @@
 	        <use class="hbc-svg-icon hbc-svg-icon--avatar__body" xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="{{ site.url }}/assets/images/hbc-icons.svg#body" ></use>
 	    </svg>
 		{% endif %}
-		
-		{% if author-bio.website %}
-		<a class="author__link" href="{{ author-bio.website }}">{{ author-bio.name }}</a>
-		{%- else -%}
-		<span class="author__name">{{- author-bio.name -}}</span>{% endif %}{% if author-bio.job_title %}<span class="author__job-title">, {{ author-bio.job_title }}</span>{% endif %}
-		{% if author-bio.mini_bio %}
-		<p class="author__bio">{{ author-bio.mini_bio }}</p>
+
+		{% assign authorLink = author-bio.name | replace: ' ', '_' %}
+		<a class="author__link" href="{{ site.url }}/authors/{{ authorLink }}">{{- author-bio.name -}}</a>
+		{%- if author-bio.job-title -%}
+		<span class="author__job-title">, {{ author-bio.job-title }}</span>
 		{% endif %}
+
+		{% if author-bio.mini-bio %}
+		<p class="author__bio">{{ author-bio.mini-bio }}</p>
+		{% endif %}
+
 	{% else %}
 	<!-- author is a guest contributor -->
 	<svg class="author__avatar" height="36" width="36" xmlns="http://www.w3.org/2000/svg">
