fix css class conflict

--- a/_includes/author-bio.html
+++ b/_includes/author-bio.html
@@ -1,5 +1,5 @@
 <!-- author bio -->
-<section class="author">
+<section class="author-bio">
 {% for author in page.author %}
 
 	{% for a in site.authors %}
