--- a/assets/sass/components/_author-bio.scss
+++ b/assets/sass/components/_author-bio.scss
@@ -3,11 +3,10 @@
 	color: $hbc-gray-2;
 	font-size: 18px;
 	text-decoration: none;
-}
-.author {
+
 	&__avatar {
 		margin-right: 5px;
-		vertical-align: bottom;
+		vertical-align: middle;
 
 		.hbc-svg-icon {
 			&--avatar__circle {
@@ -21,10 +20,13 @@
 		}
 	}
 
+	p:first-of-type {
+	    display: inline-flex;
+	    align-items: center;
+	}
+
 	&__link {
 		color: $hbc-highlight;
-		vertical-align: super;
-	    top: -2px;
 	    position: relative;
 
 		@include special-text-link();
@@ -39,11 +41,14 @@
 	
 	&__job-title {
 		font-size: 18px;
-		vertical-align: super;
+		// vertical-align: super;
+	    margin-top: -3px;
 	}
 
 	&__bio {
 		font-size: 16px;
 		color: $hbc-gray-2;
+		max-width: 820px;
+		margin-top: 0;
 	}
 }
