--- a/_includes/author-bio.html
+++ b/_includes/author-bio.html
@@ -11,9 +11,9 @@
 	{% if author-bio.name %}
 	<!-- author is a known contributor -->
 		{% if author-bio.avatar %}
-		<img class="author__avatar" src="{{ site.url }}{{ site.baseurl }}/assets/images/{{author-bio.avatar}}" height="24"/>
+		<img class="author-bio__avatar" src="{{ site.url }}{{ site.baseurl }}/assets/images/{{author-bio.avatar}}" height="24"/>
 		{% else %}
-		<svg class="author__avatar" height="36" width="36" xmlns="http://www.w3.org/2000/svg">
+		<svg class="author-bio__avatar" height="36" width="36" xmlns="http://www.w3.org/2000/svg">
 	        <use class="hbc-svg-icon hbc-svg-icon--avatar__circle" xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="{{ site.url }}{{ site.baseurl }}/assets/images/hbc-icons.svg#circle" ></use>
 	        <use class="hbc-svg-icon hbc-svg-icon--avatar__head" xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="{{ site.url }}{{ site.baseurl }}/assets/images/hbc-icons.svg#head" ></use>
 	        <use class="hbc-svg-icon hbc-svg-icon--avatar__body" xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="{{ site.url }}{{ site.baseurl }}/assets/images/hbc-icons.svg#body" ></use>
@@ -21,23 +21,23 @@
 		{% endif %}
 
 		{% assign authorLink = author-bio.name | replace: ' ', '-' | downcase %}
-		<a class="author__link" href="{{ site.url }}{{ site.baseurl }}/authors/{{ authorLink }}">{{- author-bio.name -}}</a>
+		<p><a class="author-bio__link" href="{{ site.url }}{{ site.baseurl }}/authors/{{ authorLink }}">{{- author-bio.name -}}</a>
 		{%- if author-bio.job-title -%}
-		<span class="author__job-title">, {{ author-bio.job-title }}</span>
+		<span class="author-bio__job-title">, {{ author-bio.job-title }}</span></p>
 		{% endif %}
 
 		{% if author-bio.mini-bio %}
-		<p class="author__bio">{{ author-bio.mini-bio }}</p>
+		<p class="author-bio__bio">{{ author-bio.mini-bio | truncate: 280 }}</p>
 		{% endif %}
 
 	{% else %}
 	<!-- author is a guest contributor -->
-	<svg class="author__avatar" height="36" width="36" xmlns="http://www.w3.org/2000/svg">
+	<svg class="author-bio__avatar" height="36" width="36" xmlns="http://www.w3.org/2000/svg">
         <use class="hbc-svg-icon hbc-svg-icon--avatar__circle" xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="{{ site.url }}{{ site.baseurl }}/assets/images/hbc-icons.svg#circle" ></use>
         <use class="hbc-svg-icon hbc-svg-icon--avatar__head" xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="{{ site.url }}{{ site.baseurl }}/assets/images/hbc-icons.svg#head" ></use>
         <use class="hbc-svg-icon hbc-svg-icon--avatar__body" xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="{{ site.url }}{{ site.baseurl }}/assets/images/hbc-icons.svg#body" ></use>
     </svg>
-	<span class="author__name">{{ author }}</span>
+	<span class="author-bio__name">{{ author }}</span>
 	{% endif %}
 {% endfor %}
 
